Add font download support and improve font matching
Introduces UI and backend support for downloading missing fonts directly from the system, including batch and individual downloads. Enhances font existence checks with improved fuzzy matching and caching, updates database schema for clarity, and adds new localized strings for download actions and statuses. Also improves UI feedback for search and download progress.

--- a/Z Font Analyzer/ar.lproj/Localizable.strings
+++ b/Z Font Analyzer/ar.lproj/Localizable.strings
@@ -57,3 +57,6 @@
 "access_error" = "لم يتمكن من الوصول إلى المجلد: %@";
 "font_exists" = "الخط موجود";
 "real_font_name" = "اسم الخط الحقيقي";
+"download_all" = "تنزيل جميع الخطوط المفقودة";
+"download" = "تنزيل";
+"actions" = "الإجراءات";
