--- a/Z Font Analyzer/es.lproj/Localizable.strings
+++ b/Z Font Analyzer/es.lproj/Localizable.strings
@@ -57,3 +57,13 @@
 "access_error" = "No se pudo acceder al directorio: %@";
 "font_exists" = "Fuente Existente";
 "real_font_name" = "Nombre Real de la Fuente";
+"download_all" = "Descargar Todas las Faltantes";
+"download" = "Descargar";
+"actions" = "Acciones";
+"download_started" = "Solicitud de descarga de fuente enviada al sistema...";
+"download_finished" = "Proceso de descarga de fuente finalizado.";
+"download_not_found" = "Fuente no encontrada en los servidores del sistema. Debe instalarse manualmente.";
+"download_failure_title" = "Descarga Incompleta";
+"download_failure_message" = "Las siguientes fuentes no se encontraron en los servidores de Apple y deben instalarse manualmente:";
+
+
