Enhance dashboard and add download failure sheet
Improved the DashboardView with detailed asset type cards for Motion assets. Replaced the download failure alert with a custom sheet that lists failed fonts and allows copying to clipboard. Updated localizations for new UI strings in English and Spanish.

--- a/Z Font Analyzer/es.lproj/Localizable.strings
+++ b/Z Font Analyzer/es.lproj/Localizable.strings
@@ -65,5 +65,8 @@
 "download_not_found" = "Fuente no encontrada en los servidores del sistema. Debe instalarse manualmente.";
 "download_failure_title" = "Descarga Incompleta";
 "download_failure_message" = "Las siguientes fuentes no se encontraron en los servidores de Apple y deben instalarse manualmente:";
+"copy_to_clipboard" = "Copiar al portapapeles";
+"copied" = "¡Copiado!";
+
 
 
