--- a/Z Font Analyzer/en.lproj/Localizable.strings
+++ b/Z Font Analyzer/en.lproj/Localizable.strings
@@ -65,5 +65,8 @@
 "download_not_found" = "Font not found on system servers. It must be installed manually.";
 "download_failure_title" = "Download Incomplete";
 "download_failure_message" = "The following fonts were not found on Apple's servers and must be installed manually:";
+"copy_to_clipboard" = "Copy to Clipboard";
+"copied" = "Copied!";
+
 
 
