Improve font download status messaging and localization
Enhanced status updates for font downloads to include the font name in failure messages and display warnings for 10 seconds. Updated English and Spanish localizations to support parameterized 'download_not_found' messages. Refactored ContentView to centralize status updates and improve user feedback.

--- a/Z Font Analyzer/es.lproj/Localizable.strings
+++ b/Z Font Analyzer/es.lproj/Localizable.strings
@@ -62,7 +62,7 @@
 "actions" = "Acciones";
 "download_started" = "Solicitud de descarga de fuente enviada al sistema...";
 "download_finished" = "Proceso de descarga de fuente finalizado.";
-"download_not_found" = "Fuente no encontrada en los servidores del sistema. Debe instalarse manualmente.";
+"download_not_found" = "Fuente '%@' no encontrada en los servidores del sistema. Debe instalarse manualmente.";
 "download_failure_title" = "Descarga Incompleta";
 "download_failure_message" = "Las siguientes fuentes no se encontraron en los servidores de Apple y deben instalarse manualmente:";
 "copy_to_clipboard" = "Copiar al portapapeles";
