Revamp search, export, and settings UI; improve performance
This update introduces separate search fields and debounced search for each tab, improves the export system with distinct formats for fonts and results, and enhances the settings UI with clearer sections and descriptions. The Dashboard now shows asset type percentages, and the Download Failure sheet provides external font resources. PersistenceService and SystemFontService receive performance and reliability improvements, including better SQLite pragmas and async font cache refresh. Localization is expanded, and entitlements are cleaned up. Multiple new and updated tests cover the new export logic and document handling.

--- a/Z Font Analyzer/es.lproj/Localizable.strings
+++ b/Z Font Analyzer/es.lproj/Localizable.strings
@@ -67,6 +67,13 @@
 "download_failure_message" = "Las siguientes fuentes no se encontraron en los servidores de Apple y deben instalarse manualmente:";
 "copy_to_clipboard" = "Copiar al portapapeles";
 "copied" = "¡Copiado!";
-
-
-
+"download_resources_title" = "Encontrar fuentes faltantes:";
+"google_fonts" = "Google Fonts";
+"font_squirrel" = "Font Squirrel";
+"dafont" = "DaFont";
+"adobe_fonts" = "Adobe Fonts";
+"settings_general" = "General";
+"settings_performance_desc" = "Ajusta cuántos archivos se escanean a la vez. Los valores más altos son más rápidos pero usan más CPU.";
+"settings_search_desc" = "Configura cómo el analizador busca en los archivos de tu proyecto.";
+"settings_language_desc" = "Elige el idioma de la interfaz de la aplicación.";
+"settings_appearance_desc" = "Selecciona un tema claro u oscuro, o sigue los ajustes del sistema de tu Mac.";
