--- a/Z Font Analyzer/en.lproj/Localizable.strings
+++ b/Z Font Analyzer/en.lproj/Localizable.strings
@@ -30,8 +30,10 @@
 "theme_light" = "Light";
 "theme_dark" = "Dark";
 "export_as" = "Export As";
-"json_format" = "JSON";
-"csv_format" = "CSV";
+"export_fonts_csv" = "Export Fonts Tab CSV";
+"export_fonts_json" = "Export Fonts Tab JSON";
+"export_files_csv" = "Export Files Tab CSV";
+"export_files_json" = "Export Files Tab JSON";
 "font_name" = "Font Name";
 "file_type" = "File Type";
 "description" = "Description";
@@ -67,6 +69,13 @@
 "download_failure_message" = "The following fonts were not found on Apple's servers and must be installed manually:";
 "copy_to_clipboard" = "Copy to Clipboard";
 "copied" = "Copied!";
-
-
-
+"download_resources_title" = "Find missing fonts:";
+"google_fonts" = "Google Fonts";
+"font_squirrel" = "Font Squirrel";
+"dafont" = "DaFont";
+"adobe_fonts" = "Adobe Fonts";
+"settings_general" = "General";
+"settings_performance_desc" = "Adjust how many files are scanned at once. Higher values are faster but use more CPU.";
+"settings_search_desc" = "Configure how the analyzer looks through your project files.";
+"settings_language_desc" = "Choose the language for the application interface.";
+"settings_appearance_desc" = "Select a light or dark theme, or follow your Mac's system settings.";
