Add and update localization strings for export and settings
Added Base.lproj/Localizable.strings for English base localization. Updated export and settings-related keys in Arabic, German, Spanish, French, and Simplified Chinese localization files to include new export options and settings descriptions. This improves translation coverage and consistency across supported languages.

--- a/Z Font Analyzer/ar.lproj/Localizable.strings
+++ b/Z Font Analyzer/ar.lproj/Localizable.strings
@@ -30,8 +30,10 @@
 "theme_light" = "فاتح";
 "theme_dark" = "داكن";
 "export_as" = "تصدير كـ";
-"json_format" = "JSON";
-"csv_format" = "CSV";
+"export_fonts_csv" = "تصدير تبويب الخطوط CSV";
+"export_fonts_json" = "تصدير تبويب الخطوط JSON";
+"export_files_csv" = "تصدير تبويب الملفات CSV";
+"export_files_json" = "تصدير تبويب الملفات JSON";
 "font_name" = "اسم الخط";
 "file_type" = "نوع الملف";
 "description" = "الوصف";
@@ -60,3 +62,20 @@
 "download_all" = "تنزيل جميع الخطوط المفقودة";
 "download" = "تنزيل";
 "actions" = "الإجراءات";
+"download_started" = "تم إرسال طلب تنزيل الخط إلى النظام...";
+"download_finished" = "انتهت عملية تنزيل الخط.";
+"download_not_found" = "الخط '%@' غير موجود في خوادم النظام. يجب تثبيته يدوياً.";
+"download_failure_title" = "التنزيل غير مكتمل";
+"download_failure_message" = "لم يتم العثور على الخطوط التالية في خوادم Apple ويجب تثبيتها يدوياً:";
+"copy_to_clipboard" = "نسخ إلى الحافظة";
+"copied" = "تم النسخ!";
+"download_resources_title" = "العثور على الخطوط المفقودة:";
+"google_fonts" = "Google Fonts";
+"font_squirrel" = "Font Squirrel";
+"dafont" = "DaFont";
+"adobe_fonts" = "Adobe Fonts";
+"settings_general" = "عام";
+"settings_performance_desc" = "ضبط عدد الملفات التي يتم فحصها دفعة واحدة. القيم الأعلى أسرع ولكنها تستخدم المزيد من المعالج.";
+"settings_search_desc" = "تكوين كيفية بحث المحلل في ملفات مشروعك.";
+"settings_language_desc" = "اختر لغة واجهة التطبيق.";
+"settings_appearance_desc" = "حدد مظهراً فاتحاً أو داكناً، أو اتبع إعدادات نظام Mac الخاص بك.";
