--- a/Z Font Analyzer/de.lproj/Localizable.strings
+++ b/Z Font Analyzer/de.lproj/Localizable.strings
@@ -30,8 +30,10 @@
 "theme_light" = "Hell";
 "theme_dark" = "Dunkel";
 "export_as" = "Exportieren als";
-"json_format" = "JSON";
-"csv_format" = "CSV";
+"export_fonts_csv" = "Exportieren Schriftarten-Tab CSV";
+"export_fonts_json" = "Exportieren Schriftarten-Tab JSON";
+"export_files_csv" = "Exportieren Dateien-Tab CSV";
+"export_files_json" = "Exportieren Dateien-Tab JSON";
 "font_name" = "Schriftname";
 "file_type" = "Dateityp";
 "description" = "Beschreibung";
@@ -60,3 +62,20 @@
 "download_all" = "Alle Fehlenden Herunterladen";
 "download" = "Herunterladen";
 "actions" = "Aktionen";
+"download_started" = "Schriftart-Download-Anfrage an System gesendet...";
+"download_finished" = "Schriftart-Download-Prozess beendet.";
+"download_not_found" = "Schriftart '%@' nicht auf Systemservern gefunden. Sie muss manuell installiert werden.";
+"download_failure_title" = "Download unvollständig";
+"download_failure_message" = "Die folgenden Schriftarten wurden nicht auf Apple-Servern gefunden und müssen manuell installiert werden:";
+"copy_to_clipboard" = "In die Zwischenablage kopieren";
+"copied" = "Kopiert!";
+"download_resources_title" = "Fehlende Schriftarten finden:";
+"google_fonts" = "Google Fonts";
+"font_squirrel" = "Font Squirrel";
+"dafont" = "DaFont";
+"adobe_fonts" = "Adobe Fonts";
+"settings_general" = "Allgemein";
+"settings_performance_desc" = "Passen Sie an, wie viele Dateien gleichzeitig gescannt werden. Höhere Werte sind schneller, verbrauchen aber mehr CPU.";
+"settings_search_desc" = "Konfigurieren Sie, wie der Analyzer Ihre Projektdateien durchsucht.";
+"settings_language_desc" = "Wählen Sie die Sprache für die Anwendungsoberfläche.";
+"settings_appearance_desc" = "Wählen Sie ein helles oder dunkles Design oder folgen Sie den Systemeinstellungen Ihres Mac.";
