--- a/Z Font Analyzer/fr.lproj/Localizable.strings
+++ b/Z Font Analyzer/fr.lproj/Localizable.strings
@@ -30,8 +30,10 @@
 "theme_light" = "Clair";
 "theme_dark" = "Sombre";
 "export_as" = "Exporter sous";
-"json_format" = "JSON";
-"csv_format" = "CSV";
+"export_fonts_csv" = "Exporter l'onglet Polices CSV";
+"export_fonts_json" = "Exporter l'onglet Polices JSON";
+"export_files_csv" = "Exporter l'onglet Fichiers CSV";
+"export_files_json" = "Exporter l'onglet Fichiers JSON";
 "font_name" = "Nom de la police";
 "file_type" = "Type de fichier";
 "description" = "Description";
@@ -60,3 +62,20 @@
 "download_all" = "Télécharger Tout ce qui Manque";
 "download" = "Télécharger";
 "actions" = "Actions";
+"download_started" = "Demande de téléchargement de police envoyée au système...";
+"download_finished" = "Processus de téléchargement de police terminé.";
+"download_not_found" = "Police '%@' introuvable sur les serveurs du système. Elle doit être installée manuellement.";
+"download_failure_title" = "Téléchargement incomplet";
+"download_failure_message" = "Les polices suivantes sont introuvables sur les serveurs Apple et doivent être installées manuellement:";
+"copy_to_clipboard" = "Copier dans le presse-papiers";
+"copied" = "Copié !";
+"download_resources_title" = "Trouver les polices manquantes:";
+"google_fonts" = "Google Fonts";
+"font_squirrel" = "Font Squirrel";
+"dafont" = "DaFont";
+"adobe_fonts" = "Adobe Fonts";
+"settings_general" = "Général";
+"settings_performance_desc" = "Ajustez le nombre de fichiers scannés à la fois. Des valeurs plus élevées sont plus rapides mais utilisent plus de processeur.";
+"settings_search_desc" = "Configurez la manière dont l'analyseur recherche dans vos fichiers de projet.";
+"settings_language_desc" = "Choisissez la langue de l'interface de l'application.";
+"settings_appearance_desc" = "Sélectionnez un thème clair ou sombre, ou suivez les paramètres système de votre Mac.";
