--- a/Z Font Analyzer/zh-Hans.lproj/Localizable.strings
+++ b/Z Font Analyzer/zh-Hans.lproj/Localizable.strings
@@ -30,8 +30,10 @@
 "theme_light" = "浅色";
 "theme_dark" = "深色";
 "export_as" = "导出为";
-"json_format" = "JSON";
-"csv_format" = "CSV";
+"export_fonts_csv" = "导出字体标签页 CSV";
+"export_fonts_json" = "导出字体标签页 JSON";
+"export_files_csv" = "导出文件标签页 CSV";
+"export_files_json" = "导出文件标签页 JSON";
 "font_name" = "字体名称";
 "file_type" = "文件类型";
 "description" = "描述";
@@ -60,3 +62,20 @@
 "download_all" = "下载所有缺失字体";
 "download" = "下载";
 "actions" = "操作";
+"download_started" = "字体下载请求已发送到系统...";
+"download_finished" = "字体下载过程已完成。";
+"download_not_found" = "未在系统服务器上找到字体 '%@'。必须手动安装。";
+"download_failure_title" = "下载不完整";
+"download_failure_message" = "以下字体未在 Apple 服务器上找到，必须手动安装：";
+"copy_to_clipboard" = "复制到剪贴板";
+"copied" = "已复制！";
+"download_resources_title" = "查找缺失字体：";
+"google_fonts" = "Google Fonts";
+"font_squirrel" = "Font Squirrel";
+"dafont" = "DaFont";
+"adobe_fonts" = "Adobe Fonts";
+"settings_general" = "常规";
+"settings_performance_desc" = "调整一次扫描的文件数量。数值越高越快，但占用更多 CPU。";
+"settings_search_desc" = "配置分析器如何搜索您的项目文件。";
+"settings_language_desc" = "选择应用程序界面的语言。";
+"settings_appearance_desc" = "选择浅色或深色主题，或跟随 Mac 的系统设置。";
